--- a/pga.yaml
+++ b/pga.yaml
@@ -1,15 +1,10 @@
-name: zhushi
+name: PAP
 channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/bioconda
+  - bioconda
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge
   - conda-forge
-  - bioconda
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/bioconda/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
-  - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
@@ -18,22 +13,32 @@ dependencies:
   - _r-mutex=1.0.1=anacondar_1
   - _sysroot_linux-64_curr_repodata_hack=3=haa98f57_10
   - agat=1.5.1=pl5321hdfd78af_0
+  - annotated-types=0.7.0=pyhd8ed1ab_0
   - argcomplete=1.10.0=py38_0
   - argh=0.31.3=pyhd8ed1ab_0
   - aria2=1.37.0=hbc8128a_2
+  - arpack=3.9.1=nompi_hf03ea27_102
+  - bc=1.07.1=h7f98852_0
+  - bcftools=1.23=h3a4d415_0
   - binutils_impl_linux-64=2.44=h4bf12b8_1
   - biopython=1.79=py38h0a891b7_3
   - bwidget=1.10.1=ha770c72_1
   - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.34.4=hb9d3cd8_0
-  - ca-certificates=2025.8.3=hbd8a1cb_0
+  - c-ares=1.34.6=hb03c661_0
+  - ca-certificates=2026.1.4=hbd8a1cb_0
   - cairo=1.18.4=h3394656_0
-  - cpp-expected=1.1.0=hff21bea_1
-  - curl=8.14.1=h332b0f4_0
+  - click=8.1.7=unix_pyh707e725_0
+  - coloredlogs=15.0.1=pyhd8ed1ab_3
+  - colormath=3.0.0=py_2
+  - conda-pack=0.8.0=pyhd8ed1ab_0
+  - cpp-expected=1.3.1=h171cf75_0
+  - curl=8.17.0=h4e3cde8_1
   - diamond=2.1.11=h5ca1c30_1
   - easel=0.49=h7b50bb2_1
-  - eggnog-mapper=2.1.12=pyhdfd78af_2
-  - fmt=11.1.4=h07f6e7f_1
+  - eggnog-mapper=2.1.13=pyhdfd78af_1
+  - eigen=3.4.0=h171cf75_1
+  - expat=2.7.1=hecca717_0
+  - fmt=11.2.0=h07f6e7f_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
@@ -43,25 +48,35 @@ dependencies:
   - fonts-conda-forge=1=0
   - freetype=2.13.3=ha770c72_1
   - fribidi=1.0.10=h36c2ea0_0
+  - future=1.0.0=pyhd8ed1ab_0
   - gawk=5.3.1=hcd3d067_0
   - gcc_impl_linux-64=15.1.0=h4393ad2_4
   - gclib=0.0.1=h2d50403_5
   - gettext=0.23.1=h5888daf_0
   - gettext-tools=0.23.1=h5888daf_0
+  - gfaffix=0.1.5b=h7b50bb2_1
   - gff3sort=0.1.a1a2bc9=hdfd78af_2
   - gffread=0.12.7=h077b44d_6
   - gffutils=0.13=pyh7cba7a3_0
   - gfortran_impl_linux-64=14.2.0=h0ee6e4a_2
+  - glpk=5.0=h445213a_0
   - gmp=6.3.0=hac33072_2
   - graphite2=1.3.14=hecca717_1
+  - gsl=2.7=he838d99_0
   - gxx_impl_linux-64=15.1.0=h6a1bac1_4
   - harfbuzz=11.3.3=hbb57e21_0
   - hmmer=3.4=h503566f_3
-  - htslib=1.21=h566b1c6_1
+  - htslib=1.23=h566b1c6_0
+  - humanfriendly=10.0=pyhd8ed1ab_6
+  - humanize=4.10.0=pyhd8ed1ab_0
   - icu=75.1=he02047a_0
   - importlib-metadata=8.5.0=pyha770c72_0
   - interlap=0.2.7=pyh9f0ad1d_0
+  - jemalloc=5.3.0=h5888daf_1
+  - jinja2=3.1.4=pyhd8ed1ab_0
+  - jsoncpp=1.9.6=hf42df4d_1
   - k8=1.2=h6618dc6_1
+  - kaleido-core=0.2.1=h3644ca4_0
   - kernel-headers_linux-64=3.10.0=h57e8cba_10
   - keyutils=1.6.1=h166bdaf_0
   - krb5=1.21.3=h659f571_0
@@ -72,9 +87,9 @@ dependencies:
   - libasprintf-devel=0.23.1=h8e693c7_0
   - libblas=3.9.0=28_h59b9bed_openblas
   - libcblas=3.9.0=28_he106b2a_openblas
-  - libcurl=8.14.1=h332b0f4_0
+  - libcurl=8.17.0=h4e3cde8_1
   - libdb=6.1.26=0
-  - libdeflate=1.23=h4ddbbb0_0
+  - libdeflate=1.22=hb9d3cd8_0
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
   - libexpat=2.7.1=hecca717_0
@@ -92,23 +107,24 @@ dependencies:
   - libgomp=15.1.0=h767d61c_4
   - libiconv=1.18=h4ce23a2_1
   - libidn2=2.3.7=hd590300_0
+  - libjemalloc=5.3.0=h5888daf_1
   - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=28_h7ac8fdf_openblas
   - liblzma=5.8.1=hb9d3cd8_2
   - liblzma-devel=5.8.1=hb9d3cd8_2
-  - libmamba=2.3.0=h44402ff_1
-  - libnghttp2=1.64.0=h161d5f1_0
+  - libmamba=2.3.2=hae34dd5_2
+  - libnghttp2=1.67.0=had1ee68_0
   - libnsl=2.0.1=hd590300_0
   - libopenblas=0.3.28=pthreads_h94d23a6_1
   - libpng=1.6.50=h421ea60_1
   - libsanitizer=15.1.0=h97b714f_4
-  - libsolv=0.7.33=h9463b59_1
+  - libsolv=0.7.35=h9463b59_0
   - libsqlite=3.48.0=hee588c1_1
   - libssh2=1.11.1=hf672d98_0
   - libstdcxx=15.1.0=h8f9b012_4
   - libstdcxx-devel_linux-64=15.1.0=h4c094af_104
   - libstdcxx-ng=15.1.0=h4852527_4
-  - libtiff=4.7.0=hd9ff511_4
+  - libtiff=4.7.0=hc4654cb_2
   - libunistring=0.9.10=h7f98852_0
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.6.0=hd42ef1d_0
@@ -119,17 +135,29 @@ dependencies:
   - liftoff=1.6.3=pyhdfd78af_0
   - lz4-c=1.10.0=h5888daf_1
   - lzo=2.10=hd590300_1001
+  - lzstring=1.0.4=py_1001
   - make=4.4.1=hb9d3cd8_2
-  - mamba=2.3.0=h233bd08_1
+  - mamba=2.3.2=h4a52834_2
+  - markdown=3.6=pyhd8ed1ab_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_0
+  - markupsafe=2.1.5=py38h01eb140_0
+  - mathjax=2.7.7=ha770c72_3
+  - matplotlib-base=3.7.3=py38h58ed7fa_0
+  - mdurl=0.1.2=pyhd8ed1ab_0
   - minimap2=2.28=h577a1d6_4
-  - miniprot=0.17=h577a1d6_0
+  - miniprot=0.18=h577a1d6_0
   - mmseqs2=18.8cc5c=hd6d6fdc_0
   - mpfr=4.2.1=h90cbb55_3
+  - multiqc=1.22=pyhdfd78af_0
   - ncurses=6.5=h2d0b736_3
   - networkx=2.8.8=pyhd8ed1ab_0
   - nlohmann_json=3.11.3=he02047a_1
+  - nlohmann_json-abi=3.12.0=h0f90c79_1
+  - nspr=4.38=h29cc59b_0
+  - nss=3.108=h159eef7_0
   - numpy=1.24.4=py38h59b608b_0
-  - openssl=3.5.2=h26f9b46_0
+  - odgi=0.9.0=py38hd638cd3_0
+  - openssl=3.6.0=h26f9b46_0
   - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.0.3=py38h01efb38_1
   - pango=1.56.4=hadf4263_0
@@ -247,33 +275,60 @@ dependencies:
   - perl-www-robotrules=6.02=pl5321hdfd78af_4
   - perl-xsloader=0.24=pl5321hd8ed1ab_0
   - perl-yaml=1.30=pl5321hdfd78af_0
+  - pggb=0.7.2=h9ee0642_0
+  - pigz=2.8=h421ea60_2
   - pip=22.1.2=pyhd8ed1ab_0
   - pixman=0.46.4=h537e5f6_0
   - prodigal=2.6.3=h7b50bb2_10
   - psutil=5.9.8=py38h01eb140_0
   - pthread-stubs=0.4=hb9d3cd8_1002
+  - pyaml-env=1.2.1=pyhd8ed1ab_0
+  - pybind11=3.0.1=pyh7a1b43c_0
+  - pybind11-global=3.0.1=pyhc7ab6ef_0
+  - pydantic=2.8.2=pyhd8ed1ab_0
+  - pydantic-core=2.20.1=py38h4005ec7_0
   - pyfaidx=0.8.1.3=pyhdfd78af_0
+  - pygments=2.18.0=pyhd8ed1ab_0
   - pysam=0.22.1=py38h2d19e03_2
   - python=3.8.20=h4a871b0_2_cpython
+  - python-igraph=0.11.5=py38h8746e1d_1
+  - python-kaleido=0.2.1=pyhd8ed1ab_0
   - python-tzdata=2024.2=pyhd8ed1ab_0
   - python_abi=3.8=5_cp38
   - pyvcf3=1.0.3=pyhdfd78af_0
+  - pyyaml=6.0.2=py38h2019614_0
   - r-base=4.2.3=h2d83a99_19
   - readline=8.2=h8228510_1
   - reproc=14.2.5.post0=hb9d3cd8_0
   - reproc-cpp=14.2.5.post0=h5888daf_0
-  - samtools=1.21=h96c455f_1
+  - rich=13.9.4=pyhd8ed1ab_0
+  - rich-click=1.8.3=pyhd8ed1ab_0
+  - samtools=1.23=h96c455f_0
   - sed=4.9=h6688a6e_0
-  - seqkit=2.10.0=h9ee0642_0
-  - seqtk=1.4=h577a1d6_3
+  - seqkit=2.12.0=he881be0_1
+  - seqtk=1.5=h577a1d6_1
+  - seqwish=0.7.11=h5ca1c30_1
   - setuptools=70.3.0=pyhd8ed1ab_0
-  - simdjson=3.13.0=h84d6215_0
+  - simdjson=4.0.7=hb700be7_0
   - simplejson=3.19.3=py38h2019614_0
+  - smoothxg=0.8.0=h5b0a936_1
+  - spectra=0.0.11=py_1
+  - sqlite=3.48.0=h9eae976_1
   - sysroot_linux-64=2.17=h57e8cba_10
+  - tabix=1.11=hdfd78af_0
+  - tabixpp=1.1.2=hbefcdb2_4
+  - texttable=1.7.0=pyhd8ed1ab_0
+  - time=1.9=h280c20c_1
   - tk=8.6.13=noxft_h4845f30_101
   - tktable=2.10=h8d826fa_7
+  - typeguard=4.4.1=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
   - ujson=5.10.0=py38h854fd01_0
-  - vg=1.63.1=h9ee0642_0
+  - vcfbub=0.1.1=hc1c3326_2
+  - vcflib=1.0.10=hdcf5f25_1
+  - vg=1.59.0=h9ee0642_0
+  - wfa2-lib=2.3.5=h9948957_3
+  - wfmash=0.14.0=h11f254b_0
   - wget=1.21.4=hda4d442_0
   - wheel=0.45.1=pyhd8ed1ab_0
   - xlsxwriter=3.2.0=pyhd8ed1ab_0
@@ -288,23 +343,53 @@ dependencies:
   - xz=5.8.1=hbcc6ac9_2
   - xz-gpl-tools=5.8.1=hbcc6ac9_2
   - xz-tools=5.8.1=hb9d3cd8_2
+  - yaml=0.2.5=h280c20c_3
   - yaml-cpp=0.8.0=h3f2d84a_0
   - zipp=3.21.0=pyhd8ed1ab_0
   - zlib=1.3.1=hb9d3cd8_2
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
+      - certifi==2025.8.3
+      - charset-normalizer==3.4.3
       - cigar==0.1.3
+      - contourpy==1.1.1
+      - cycler==0.12.1
       - exceptiongroup==1.2.2
+      - fonttools==4.57.0
+      - idna==3.10
+      - importlib-resources==6.4.5
       - iniconfig==2.1.0
       - intervaltree==3.1.0
+      - joblib==1.4.2
+      - kiwisolver==1.4.7
       - lifton==1.0.2
+      - lxml==6.0.1
+      - matplotlib==3.7.5
+      - matplotlib-venn==1.1.2
+      - narwhals==1.42.1
+      - patsy==1.0.2
+      - pillow==10.4.0
+      - plotly==6.3.0
       - pluggy==1.5.0
+      - pymupdf==1.24.11
+      - pyparsing==3.1.4
+      - pypdf2==3.0.1
       - pytest==8.3.5
       - python-dateutil==2.9.0.post0
+      - python-docx==1.1.2
+      - python-pptx==1.0.2
       - pytz==2025.1
+      - requests==2.32.4
+      - scikit-learn==1.3.2
+      - scipy==1.10.1
+      - seaborn==0.13.2
       - six==1.17.0
       - sortedcontainers==2.4.0
+      - statsmodels==0.14.1
+      - threadpoolctl==3.5.0
       - tomli==2.2.1
       - tqdm==4.67.1
+      - typing-extensions==4.13.2
       - tzdata==2025.1
+      - urllib3==2.2.3
 prefix: /public/home/acfurbn1nz/miniconda3/envs/zhushi
